Fix/header html and compatability (#20)
* Add header HTML structure and navigation menu

* Fix header HTML structure and improve compatibility with footer

* Refactor header component scripts and styles for improved structure and compatibility

* Add header component script to favorites, landing, and pet-card-detail pages

* Add class to header menu icons for consistent styling

* Refactor header-loader.js to load scripts and styles before fetching HTML for improved performance

* Refactor header-loader.js to load scripts after HTML insertion and remove inline script from header.html

* Adjust off-screen menu width and position for improved responsiveness

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -98,6 +98,11 @@
   color: #365983;
 }
 
+.header-li-img {
+  width: 1em;
+  height: auto;
+}
+
 /* Icon style */
 .icon {
   width: 26px;
@@ -151,12 +156,14 @@
 /* ------------------ RESPONSIVE ------------------ */
 @media (max-width: 390px) {
   .off-screen-menu {
+    left: -70vw;
     width: 70vw;
   }
 }
 
 @media (min-width: 768px) {
   .off-screen-menu {
+    left: -25vw;
     width: 25vw;
   }
 }
